--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,7 @@
-# Site settings
-title: retrorabble
-email: retrorabble@takenorisks.com
-url: http://www.retrorabble.com
-description: "Sega, Nintendo, Commodore, Atari, Retrogaming, Retrocomputing, Videogames"
+name: "Retrorabble.com"
+description: "Huge Nintendo, Sega, Commodore and Atari fans. We celebrate #gamingmemories, #retrogaming and #retrocomputing!"
+author: "jamesfmackenzie"
 
-# Collections
-collections:
-  projects:
-    output: true
+url: "http://localhost:4000"
 
-# Contact form: comment the line below if you want to stick with the default PHP contact form
-contact: static
 
-# Color settings (hex-codes without the leading hash-tag)
-color:
-  primary: 18bc9c #80B3FF
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
-
-# Footer settings
-footer:
-  copyright: James Mackenzie
-  #location: Location
-  social: Social
-  #credits: Credits
-
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
-social:
-  - title: twitter
-    url: http://twitter.com/retrorabble
-  
-# Build settings
-markdown: kramdown
-permalink: pretty
