--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Retrorabble.com"
-description: "Huge Nintendo, Sega, Commodore and Atari fans. We celebrate #gamingmemories, #retrogaming and #retrocomputing!"
+description: "We celebrate gaming memories, retrogaming and retrocomputing!"
 author: "jamesfmackenzie"
 
 url: "http://www.retrorabble.com"
